# ecoledirecte-imap

./: Cargo.toml  README.md
src/: api.rs  auth.rs  fetch.rs  lib.rs  lsub.rs  mailbox.rs  main.rs  status.rs  store.rs
