[package]
name = "ecoledirecte-imap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bytes = "1.5.0"
chrono = "0.4.31"
imap-codec = { version = "1.0.0", features = ["bounded-static"] }
mime-sniffer = "0.1.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_json = "1.0.107"
utf7-imap = "0.3.2"
